12-grocery-list/src/style.css
:root {
  font-size: 100%;
  line-height: 1.5;
  box-sizing: border-box;
  font-family: Poppins, sans-serif;

  --bg: #fffbec;
  --brand-light: #dfeedf;
  --brand-dark: #163d25;
  --secondary: #f39e55;
  --secondary-dark: hsl(28, 87%, 34%);
}

*,
*::after,
*::before {
  box-sizing: inherit;
  padding: 0;
  margin: 0;
}

body {
  padding-top: 8rem;
  min-height: 100vh;
  background-image: url('./images/bg.svg');
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
}

main {
  padding: 2rem;
  min-width: 300px;
  width: 60%;
  max-width: 900px;
  background-color: white;
  margin: auto;
  color: var(--brand-dark);
  border-radius: 1rem;
}

h1 {
  font-weight: normal;
  margin-bottom: 1rem;
  font-size: 2rem;
  text-align: center;
}

ul {
  list-style-type: none;
}

button,
input {
  font-size: 100%;
  font-family: inherit;
  line-height: inherit;
  background-color: transparent;
  border: none;
  color: inherit;
  outline: none;
  -webkit-appearance: none;
  min-width: 0;
}

button:hover {
  cursor: pointer;
}

/* || btn */

.btn,
.form__input {
  padding: 0.5rem 1rem;
  border: 2px solid var(--secondary);
  border-radius: 0.5rem 1rem;
  transition: all 0.3s;
  display: flex;
  justify-content: center;
  align-items: center;
}

.btn:hover,
.btn:focus {
  background-color: var(--secondary);
}

.btn--danger {
  border-color: rgb(194, 14, 14);
}

.btn--danger:hover,
.btn--danger:focus {
  background-color: rgb(194, 14, 14);
  color: white;
}

/* || list */

.list__item {
  margin-bottom: 1rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.list__edit {
  display: none;
  padding: 0.5rem;
  max-width: 10rem;
}

.list__done {
  display: none;
  color: var(--brand-dark);
}

.list__delete {
  color: rgb(194, 14, 14);
}

.list__edit:focus {
  border-bottom: 1px solid var(--brand-dark);
}

/* || form */

.form {
  margin-top: 3rem;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.form__row {
  width: 100%;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  margin-bottom: 1rem;
}

.form__input:focus {
  box-shadow: 0px 0px 8px var(--secondary);
}

